Fixes menu being behind linear card on open.

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -115,7 +115,6 @@ ul li {
 	animation-name: fade-in;
 	animation-duration: 1000ms;
 	animation-direction: normal;
-	animation-fill-mode: forwards;
 	animation-timing-function: ease-in;
 }
 
@@ -126,7 +125,6 @@ ul li {
 	justify-content: center;
 	align-items: center;
 	font-size: 0.85rem;
-
 }
 
 .title {
@@ -180,6 +178,7 @@ ul li {
 	@extend .qualification;
 	border-bottom: 1px solid rgb(213, 213, 213);
 }
+
 .qualification--3 {
 	@extend .qualification;
 	border-right: 1px solid rgb(213, 213, 213);
@@ -200,12 +199,33 @@ ul li {
 	color: rgb(238, 101, 136);
 }
 
+.services-wrapper {
+	display: flex;
+	flex-direction:	column;
+
+	@include md {
+		flex-direction: row;
+		align-items: stretch;
+	}
+}
+
 .second-image {
 	background-image:  linear-gradient(rgba(76, 71, 119, 0.5), rgba(76, 71, 119, 0.5)), url('../images/desert_house.jpg');
 	background-position: center center;
 	background-size: cover;
 	width: 100%;
 	height: 15rem;
+
+	@include md {
+		width: 50%;
+	}
+}
+
+.second-card-wrapper {
+	display: flex;
+	@include md {
+		width: 50%;
+	}
 }
 
 .second-card {
